--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -57,17 +57,23 @@
         <div class="span4">
             <i class="icon-globe icon-2x"></i>
             <h3>Rekayasa Perangkat Lunak</h3>
-            <p>Rekayasa Perangkat Lunak, Teknik Komputer dan Jaringan, dan Multimedia.</p>
+            <p>Sebuah bidang profesi dalam bidang TI yang mendalami cara-cara 
+                pengembangan perangkat lunak, termasuk pembuatan, pemeliharaan, 
+                manajemen organisasi pengembangan  dan sebagainya.</p>
         </div>
         <div class="span4">
             <i class="icon-desktop icon-2x"></i>
             <h3>Teknik Komputer dan Jaringan</h3>
-            <p>Teknik Instalasi Tenaga Listrik, dan Teknik Otomasi Industri.</p>
+            <p>Sebuah bidang profesi dalam bidang TI yang mendalami cara-cara 
+                pengembangan perangkat keras, termasuk pembuatan, pemeliharaan, 
+                manajemen organisasi pengembangan  dan sebagainya.</p>
         </div>
         <div class="span4">
             <i class="icon-facetime-video icon-2x"></i>
             <h3>Multimedia</h3>
-            <p>Teknik yang bekerja di bidang elektronika khususnya Audio dan Video.</p>
+            <p>Sebuah bidang profesi dalam bidang TI yang penerapannya dalam 
+                berbagai bidang tidak terbatas seperti pada iklan, Seni, 
+                pendidikan, hiburan, teknik, dan aplikasi sementara spasial.</p>
         </div>
     </div>
 </div>
@@ -105,7 +111,7 @@
                     <h4><i class="icon-pushpin"></i> Artikel</h4>
                 </div>
                 <div class="pull-right">
-                    <!--                    <a href="#">Lihat Semua Artikel</a>-->
+                    <!--<a href="#">Lihat Semua Artikel</a>-->
                 </div>
             </div>
             <ul class="unstyled article">
