--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -189,7 +189,7 @@
                     <div class = "inner">
                         <div class = "copyright pull-left">
                             &copy;
-                            Copyright 2013 SMK NEGERI 4 Bandung.<br />Hak Cipta Dilindungi oleh Undang-Undang.
+                            Copyright 2013 TI SMK NEGERI 4 Bandung.<br />Hak Cipta Dilindungi oleh Undang-Undang.
                         </div>
                         <div class = "pull-right">
                             <ul class = "inline">
