--- a/application/views/scripts/sidebar.phtml
+++ b/application/views/scripts/sidebar.phtml
@@ -23,7 +23,7 @@
 
 <div class = "agenda widget top-blue">
     <div class = "widget-header">
-        <h4><i class = "icon-calendar"></i> Agenda</h4>
+        <h4><i class = "icon-calendar"></i> <a href="<?php $this->url(array('controller'=>'events', 'action' => 'index')); ?>">Agenda</a></h4>
     </div>
     <div class = "widget-content">
         <ul class = "unstyled">
@@ -67,7 +67,7 @@
 
 <div class = "agenda widget top-red">
     <div class = "widget-header">
-        <h4><i class = "icon-briefcase"></i> Lowongan Kerja</h4>
+        <h4><i class = "icon-briefcase"></i> <a href="<?php $this->url(array('controller' => 'jobs', 'action' => 'index')); ?>">Lowongan Kerja</a></h4>
     </div>
     <div class = "widget-content">
         <ul class = "unstyled">
