--- a/application/views/scripts/article/index.phtml
+++ b/application/views/scripts/article/index.phtml
@@ -49,7 +49,7 @@
                             <div class="article-footer pull-right">
                                 <span class="day"><small>Dibuat pada <span class="day"><?php echo Date('j', strtotime($article['created_on'])); ?></span>
                                         <span class="month"><?php echo Date('M', strtotime($article['created_on'])); ?></span>
-                                        oleh&nbsp;<a href="#"><?php echo $article['created_by']; ?></a>&nbsp;&nbsp;
+                                        oleh&nbsp;<a href="<?php echo $this->url(array('controller' => 'user', 'action' => 'view', 'username' => $article['created_by']), null, true); ?>"><?php echo $article['created_by']; ?></a>&nbsp;&nbsp;
                                     </small>
                             </div>
                         </article>
