--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -138,7 +138,7 @@
                             </div>
                             <div class="article-footer">
                                 <i class="icon-user"></i>&nbsp;
-                                    <a class="userlink" href="<?php echo $this->url(array('controller' => 'user', 'action' => 'index', 'username' => $article['created_by'])); ?>" data-toggle='modal'><?php echo $article['created_by']; ?></a>&nbsp;&nbsp;
+                                <a href="<?php echo $this->url(array('controller' => 'user', 'action' => 'view', 'username' => $article['created_by'])); ?>"><?php echo $article['created_by']; ?></a>&nbsp;&nbsp;
                                 <i class="icon-eye-open"></i>&nbsp;<?php echo $article['views']; ?>&nbsp;&nbsp;
                                 <i class="icon-comments"></i>&nbsp;<?php echo $article['comments']; ?> &nbsp;&nbsp;
                                 <i class="icon-thumbs-up"></i>&nbsp;
