--- a/application/modules/admin/views/scripts/news/all.phtml
+++ b/application/modules/admin/views/scripts/news/all.phtml
@@ -109,8 +109,8 @@
                                 </a>
                             </td>
                             <td>
-                                <a href="#">
-                                    <?php echo $news->created_by; ?>
+                                <a href="<?php echo $this->url(array('controller' => 'user', 'action' => 'view', 'username' => $news->created_by, 'module' => 'default')); ?>">
+                                    <?php echo $news->created_by ?>
                                 </a>
                             </td>
                             <td><?php echo $this->status($news->status); ?></td>
